// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nature-ui/input Elements inside input render correctly 1`] = `
<DocumentFragment>
  <span
    class="flex"
  >
    <span
      class="flex w-auto items-center whitespace-no-wrap css-1cf2eow-InputAddon rounded-l px-4 bg-gray-100 border-gray-200"
    >
      <span>
        Hello
      </span>
    </span>
    <input
      class="rounded w-full outline-none transition-all duration-150 border-gray-200 css-1ri2j3w focus:border-blue-600"
    />
    <span
      class="flex w-auto items-center whitespace-no-wrap css-1bzcr1t-InputAddon rounded-r px-4 bg-gray-100 border-gray-200"
    >
      <span>
        Hello
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`@nature-ui/input Input addons render correctly 1`] = `
<DocumentFragment>
  <span
    class="flex"
  >
    <span
      class="flex w-auto items-center whitespace-no-wrap css-1cf2eow-InputAddon rounded-l px-4 bg-gray-100 border-gray-200"
    >
      https://
    </span>
    <input
      class="rounded w-full outline-none transition-all duration-150 border-gray-200 css-1ri2j3w focus:border-blue-600"
    />
    <span
      class="flex w-auto items-center whitespace-no-wrap css-1bzcr1t-InputAddon rounded-r px-4 bg-gray-100 border-gray-200"
    >
      .com
    </span>
  </span>
</DocumentFragment>
`;

exports[`@nature-ui/input Input renders correctly 1`] = `
<DocumentFragment>
  <input
    class="w-full outline-none transition-all duration-150 border-gray-200 css-1ri2j3w focus:border-blue-600 rounded"
  />
</DocumentFragment>
`;
